curriculum update - chemistry